updated code 3rd Sep
